samples/_failures_safe/1761004363_1e3f87_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ce27c34.c: In function ‘main’:
./samples/SAFE/__tmp_9ce27c34.c:153:9: error: expected declaration or statement at end of input
  153 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_9ce27c34.c:153:9: error: expected declaration or statement at end of input
